package com.example.navigation.ui.home;

/**
 * 项目名： Navigation
 * 文件名： Constant
 *
 * @Author: Zhihao Shu(Harry)
 * @email: 919900130@qq.com
 * 创建日期：2020 2020/7/22 10:14
 * 描述：
 */
public class Constant {
    public static final int IO_BUFFER_SIZE = 1024;
    public static final int draw_line = 0;
    public static final int draw_circle = 1;
    public static final int draw_lineCircle = 2;
    public static final int eraser = 3;
    public static final int group_circle = 4;

}
